@@ -1,4 +1,5 @@
 SVN
+- Allow for a 0 offset in all ingres field functions 
 - Update build scripts for OpenVMS CSWS PHP 2.0
 
 2.2.1
